--- a/ybk/templates/index.html
+++ b/ybk/templates/index.html
@@ -1,1 +1,26 @@
-<h1>Hello, Bootstrap</h1>
+{% extends "layout.html" %}
+
+{% block main %}
+          <div class="jumbotron">
+            <h1>邮币卡全网通</h1>
+            <p>
+              整合国内全部邮币卡交易所的申购/中签信息
+              &nbsp; | &nbsp; 智能分析中签率、中签策略、潜在收益</p>
+            <p>
+              行情交易全部整合、客观分析
+              &nbsp; | &nbsp; 邮币卡选票经验讨论交流</p>
+            <p>
+                <a class="btn btn-lg btn-primary" href="{{ url_for('walkthrough') }}" role="button">查看开户攻略 »</a>
+                <a class="btn btn-lg btn-primary" href="{{ url_for('forum') }}" role="button">交流炒邮币卡心得 »</a>
+            </p>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+                <h2>交易所公告</h2>
+            </div>
+            <div class="col-md-6">
+                <h2>交易所一览</h2>
+            </div>
+          </div>
+{% endblock %}
