restructure template folder, add error pages

--- a/ybk/templates/navbar.html
+++ b/ybk/templates/navbar.html
@@ -1,12 +1,12 @@
       <!-- Static navbar -->
       {% set navbars = [
-        {'nav': 'index', 'name': '首页', 'url': url_for('index')},
-        {'nav': 'walkthrough', 'name': '开户攻略', 'url': url_for('walkthrough')},
-        {'nav': 'announcement', 'name': '公告', 'url': url_for('announcement')},
-        {'nav': 'analysis', 'name': '中签分析', 'url': url_for('analysis')},
-        {'nav': 'trade', 'name': '交易行情', 'url': url_for('trade')},
-        {'nav': 'forum', 'name': '论坛交流', 'url': url_for('forum')},
-        {'nav': 'about', 'name': '关于', 'url': url_for('about')},
+        {'nav': 'index', 'name': '首页', 'url': url_for('frontend.index')},
+        {'nav': 'walkthrough', 'name': '开户攻略', 'url': url_for('frontend.walkthrough')},
+        {'nav': 'announcement', 'name': '公告', 'url': url_for('frontend.announcement')},
+        {'nav': 'analysis', 'name': '中签分析', 'url': url_for('frontend.analysis')},
+        {'nav': 'trade', 'name': '交易行情', 'url': url_for('frontend.trade')},
+        {'nav': 'forum', 'name': '论坛交流', 'url': url_for('frontend.forum')},
+        {'nav': 'about', 'name': '关于', 'url': url_for('frontend.about')},
         ]
       %}
       {{ navs }}
@@ -19,7 +19,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">邮币卡全网通</a>
+            <a class="navbar-brand" href="/">邮币卡全网通</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
