--- a/ybk/templates/frontend/index.html
+++ b/ybk/templates/frontend/index.html
@@ -21,8 +21,8 @@
                 <table class="table table-striped">
                   <thead>
                     <th class="col-md-2">交易所</th>
-                    <th class="col-md-2">类别</th>
-                    <th class="col-md-6">标题</th>
+                    <th class="col-md-1">类别</th>
+                    <th class="col-md-7">标题</th>
                     <th class="col-md-2">日期</th>
                   </thead>
                   <tbody>
@@ -40,6 +40,9 @@
                     {% endfor %}
                   </tbody>
                 </table>
+                <div class="pull-right">
+                  <a class="btn btn-md btn-primary" href="{{ url_for('frontend.announcement') }}" role="button">更多公告信息 »</a>
+                </div>
             </div>
             <div class="col-md-4">
                 <h2>交易所一览</h2>
@@ -50,10 +53,24 @@
                     <th>中签公告地址</th>
                   </thead>
                   <tbody>
+                    {% for e in exchanges %}
                     <tr>
+                      <td><a href="{{ e.url }}" target="_blank">
+                        {{ e.abbr }}
+                      </a></td>
+                      <td><a href="{{ e.offer.index }}" target="_blank">
+                        申购公告地址
+                      </a></td>
+                      <td><a href="{{ e.result.index }}" target="_blank">
+                        中签公告地址
+                      </a></td>
                     </tr>
+                    {% endfor %}
                   </tbody>
                 </table>
+            </div>
+            <div class="pull-right">
+              <a class="btn btn-md btn-primary" href="{{ url_for('frontend.walkthrough') }}" role="button">更多交易所信息 »</a>
             </div>
           </div>
 {% endblock %}
