announcement page & selectize

--- a/ybk/templates/navbar.html
+++ b/ybk/templates/navbar.html
@@ -2,7 +2,7 @@
       {% set navbars = [
         {'nav': 'index', 'name': '首页', 'url': url_for('frontend.index')},
         {'nav': 'walkthrough', 'name': '开户攻略', 'url': url_for('frontend.walkthrough')},
-        {'nav': 'announcement', 'name': '公告', 'url': url_for('frontend.announcement')},
+        {'nav': 'announcement', 'name': '公告信息', 'url': url_for('frontend.announcement')},
         {'nav': 'analysis', 'name': '中签分析', 'url': url_for('frontend.analysis')},
         {'nav': 'trade', 'name': '交易行情', 'url': url_for('frontend.trade')},
         {'nav': 'forum', 'name': '论坛交流', 'url': url_for('frontend.forum')},
