--- a/ybk/static/css/ybk.css
+++ b/ybk/static/css/ybk.css
@@ -1,3 +1,11 @@
 .footer {
     margin-top: 50px;
 }
+
+
+/* frontend/announcement.html */
+
+.filters .selectize-control {
+    width: 120px;
+    display: inline-block;
+}
