--- a/ybk/templates/frontend/announcement.html
+++ b/ybk/templates/frontend/announcement.html
@@ -1,6 +1,107 @@
 {% extends "layout.html" %}
+
+{% block css %}
+    <link href="{{ url_for('static', filename='css/selectize.bootstrap3.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block main %}
-        <div class="jumbotron">
-            <h1>施工中...</h1>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>公告信息聚合</h2>
+        <div class="pull-right filters">
+           <select id="select-exchange" class="" placeholder="交易所">
+            <option value="">交易所</option>
+            {% for e in exchanges %}
+              <option value="{{ e.abbr }}"
+                {% if exchange == e.abbr %}selected{% endif %}>
+                {{ e.abbr }}
+              </option>
+            {% endfor %}
+          </select>
+          <select id="select-type" class="" placeholder="类别">
+            <option value="">类别</option>
+            <option value="offer" {% if type_ == 'offer' %}selected{% endif %}>申购</option>
+            <option value="result" {% if type_ == 'result' %}selected{% endif %}>中签</option>
+          </select>
+          <a href="{{ url_for('frontend.announcement') }}" class="btn btn-md btn-primary" role="button" style="margin-top:-25px;">清空</a>
         </div>
+        <table class="table table-striped">
+          <thead>
+            <th class="col-md-2">交易所</th>
+            <th class="col-md-1">类别</th>
+            <th class="col-md-7">标题</th>
+            <th class="col-md-2">时间</th>
+          </thead>
+          <tbody>
+          {% for a in announcements %}
+            <tr>
+              <td>{{ a.exchange }}</td>
+              <td>{{ a.type_ }}</td>
+              <td>
+                <a href="{{ a.url }}" target="_blank">
+                  {{ a.title }}
+                </a>
+              </td>
+              <td>{{ a.published_at | bjdate }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        <nav style="margin-top:-30px;">
+          <ul class="pagination">
+            {% if pagination.has_prev %}
+            <li>
+              <a href="#" aria-label="上一页" data-page="{{pagination.page-1}}">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            {% endif %}
+            {%- for page in pagination.iter_pages() %}
+                {% if page %}
+                  {% if page != pagination.page %}
+                    <li><a href="#" data-page="{{page}}">{{ page }}</a></li>
+                  {% else %}
+                    <li class="active"><a>{{ page }}</a></li>
+                  {% endif %}
+                {% else %}
+                    <li><span class=ellipsis>…</span></li>
+                {% endif %}
+            {%- endfor %}
+            {% if pagination.has_next %}
+            <li>
+              <a href="#" aria-label="下一页" data-page="{{pagination.page+1}}">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+            {% endif %}
+          </ul>
+        </nav>
+      </div>
+    </div>
+{% endblock %}
+
+{% block js %}
+    <script src="{{ url_for('static', filename='js/selectize.min.js') }}"></script>
+    <script>
+        function reselect(page){
+            if (isNaN(page)){
+                page = 1;
+            }
+            var params = {
+                exchange: $('#select-exchange').val(),
+                type: $('#select-type').val(),
+                page: page,
+            }
+            location.href = "{{ url_for('frontend.announcement') }}"+ '?' + $.param(params);
+        }
+        $('#select-exchange').selectize({
+            onChange: reselect,
+        })
+        $('#select-type').selectize({
+            onChange: reselect,
+        });
+        $('.pagination').on('click', 'a', function(){
+            reselect($(this).data('page'));
+        });
+    </script>
 {% endblock %}
