add updated_at to announcement.html #3

--- a/ybk/templates/frontend/announcement.html
+++ b/ybk/templates/frontend/announcement.html
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2>公告信息聚合</h2>
-        <p>*每逢整点更新</p>
+        <p>*每逢整点更新, 上次更新时间 {{ updated_at | bjtime }}</p>
         <div class="pull-right filters">
            <select id="select-exchange" class="" placeholder="交易所">
             <option value="">交易所</option>
