--- a/ybk/templates/layout.html
+++ b/ybk/templates/layout.html
@@ -43,6 +43,18 @@
       {% include "footer.html" %}
     </div> <!-- /container -->
 
+
+    <!-- 站长统计(百度) -->
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?84b6cda563abddab2f438cacb02c6a89";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -50,6 +62,9 @@
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{{ url_for('static', filename='js/ie10-viewport-bug-workaround.js') }}"></script>
+
+
+
     {% block js %}
     {% endblock %}
   </body>
