add opening conf to all exchanges #11

--- a/ybk/templates/frontend/about.html
+++ b/ybk/templates/frontend/about.html
@@ -2,5 +2,9 @@
 {% block main %}
         <div class="jumbotron">
             <h1>施工中...</h1>
+
         </div>
+        <h2>这个网站是什么?/什么是邮币卡线上交易?</h2>
+        <h2>为什么要投资邮币卡?</h2>
+        <h2>怎样投资邮币卡</h2>
 {% endblock %}
