--- a/ybk/templates/frontend/index.html
+++ b/ybk/templates/frontend/index.html
@@ -11,6 +11,7 @@
               &nbsp; | &nbsp; 邮币卡选票经验讨论交流</p>
             <p>
                 <a class="btn btn-lg btn-primary" href="{{ url_for('frontend.walkthrough') }}" role="button">查看开户攻略 »</a>
+                &nbsp;
                 <a class="btn btn-lg btn-primary" href="{{ url_for('frontend.forum') }}" role="button">交流炒邮币卡心得 »</a>
             </p>
           </div>
