add open account page structure, no css, no data #11

--- a/ybk/templates/frontend/about.html
+++ b/ybk/templates/frontend/about.html
@@ -1,10 +1,11 @@
 {% extends "layout.html" %}
 {% block main %}
-        <div class="jumbotron">
-            <h1>施工中...</h1>
-
-        </div>
-        <h2>这个网站是什么?/什么是邮币卡线上交易?</h2>
-        <h2>为什么要投资邮币卡?</h2>
-        <h2>怎样投资邮币卡</h2>
+    <div class="row" style="margin-bottom: 20px;">
+      <div class="text-center" style="border: 1px solid #ccc; margin: 30px; padding-bottom: 10px;">
+        <h1>施工中... 0%</h1>
+      </div>
+    </div>
+        <h3>这个网站是什么?/什么是邮币卡线上交易?</h2>
+        <h3>为什么要投资邮币卡?</h2>
+        <h3>怎样投资邮币卡</h2>
 {% endblock %}
