--- a/ybk/templates/frontend/trade.html
+++ b/ybk/templates/frontend/trade.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block main %}
-        <div class="jumbotron">
-            <h1>施工中...</h1>
-        </div>
+    <div class="row" style="margin-bottom: 20px;">
+      <div class="text-center" style="border: 1px solid #ccc; margin: 30px; padding-bottom: 10px;">
+        <h1>施工中... 0%</h1>
+      </div>
+    </div>
 {% endblock %}
