basic user login/logout and templates #14

--- a/ybk/templates/navbar.html
+++ b/ybk/templates/navbar.html
@@ -29,6 +29,7 @@
               </li>
             {% endfor %}
             </ul>
+            {% include "user.html" %}
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
